[gd_scene load_steps=4 format=3 uid="uid://ctlppxshfqr7i"]

[ext_resource type="Script" uid="uid://cigwov7t2y0qe" path="res://Lobby/MatchFinder/MatchFinder.gd" id="1_ub7sj"]
[ext_resource type="PackedScene" uid="uid://lowp636hjckg" path="res://Lobby/MatchFinder/MapSelector.tscn" id="2_ii3i2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsanu"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.051971, 0.051971, 0.0519709, 1)

[node name="Match Finder" type="PanelContainer"]
custom_minimum_size = Vector2(350, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_ub7sj")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MatchmakingFinder" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/MatchmakingFinder"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Join/Create Match"

[node name="MatchField" type="HBoxContainer" parent="VBoxContainer/MatchmakingFinder"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MatchmakingFinder/MatchField"]
layout_mode = 2
text = "Match name"

[node name="MatchNameField" type="LineEdit" parent="VBoxContainer/MatchmakingFinder/MatchField"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="JoinCreateMatch" type="Button" parent="VBoxContainer/MatchmakingFinder"]
layout_mode = 2
text = "Join/Create"

[node name="Title2" type="Label" parent="VBoxContainer/MatchmakingFinder"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Find Match"

[node name="MatchmakingButton" type="Button" parent="VBoxContainer/MatchmakingFinder"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Matchmaking"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="YourMatchInfo" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MatchInfoLabel" type="Label" parent="VBoxContainer/ScrollContainer/YourMatchInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Your match"

[node name="MatchNameLabel" type="Label" parent="VBoxContainer/ScrollContainer/YourMatchInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Match name: %s"

[node name="MatchIDLabel" type="Label" parent="VBoxContainer/ScrollContainer/YourMatchInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Match name: %s"

[node name="PlayersListLabel" type="Label" parent="VBoxContainer/ScrollContainer/YourMatchInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Players"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ScrollContainer/YourMatchInfo"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bsanu")

[node name="MatchmakingPlayers" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/YourMatchInfo/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MapSelectionVbox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/YourMatchInfo"]
unique_name_in_owner = true
layout_mode = 2

[node name="SelectMatchLabel" type="Label" parent="VBoxContainer/ScrollContainer/YourMatchInfo/MapSelectionVbox"]
unique_name_in_owner = true
layout_mode = 2
text = "Please select a map..."

[node name="MapSelector" parent="VBoxContainer/ScrollContainer/YourMatchInfo/MapSelectionVbox" instance=ExtResource("2_ii3i2")]
unique_name_in_owner = true
layout_mode = 2

[node name="HowManyPlayersConfirmed" type="Label" parent="VBoxContainer/ScrollContainer/YourMatchInfo"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmationProgressBar" type="ProgressBar" parent="VBoxContainer/ScrollContainer/YourMatchInfo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
show_percentage = false

[node name="StartGameButton" type="Button" parent="VBoxContainer/ScrollContainer/YourMatchInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="Ping" type="Button" parent="VBoxContainer/ScrollContainer/YourMatchInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ping"

[node name="Close_Quit" type="Button" parent="VBoxContainer/ScrollContainer/YourMatchInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close/Quit Match"

[connection signal="pressed" from="VBoxContainer/MatchmakingFinder/JoinCreateMatch" to="." method="_on_join_create_match_button_down"]
[connection signal="pressed" from="VBoxContainer/MatchmakingFinder/MatchmakingButton" to="." method="_on_matchmaking_button_down"]
[connection signal="map_selected" from="VBoxContainer/ScrollContainer/YourMatchInfo/MapSelectionVbox/MapSelector" to="." method="_on_map_selector_map_selected"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/YourMatchInfo/StartGameButton" to="." method="_on_start_game"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/YourMatchInfo/Ping" to="." method="_on_ping_button_down"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/YourMatchInfo/Close_Quit" to="." method="_on_close_quit_match_pressed"]
